--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,10 +6,6 @@ on:
       - main
   workflow_dispatch:
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
-  cancel-in-progress: true
-
 permissions:
   contents: read
 
@@ -25,8 +21,20 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16'
-          cache: yarn
+          cache: npm
       - name: Installation
-        run: yarn
+        run: npm install
       - name: Build 
-        run: yarn build
+        run: npm run build
+        
+  Deploy:
+    environment:
+      name: github-pages
+      url: https://demonkiller.tech/
+    needs: Build
+    runs-on: ubuntu-latest
+    name: Deploy
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        run: GIT_USER=demonkillerr yarn deploy
