--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,5 +1,5 @@
 demonkiller:
   name: DemonKiller
-  title: open-source developer
-  url: https://demonkiller.tech
-  img_url: https://github.com/demonkillerr.png
+  title: Open Source Developer
+  url: https://demonkiller.in
+  image_url: https://github.com/demonkillerr.png
