update blog author title

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,5 +1,5 @@
 demonkiller:
   name: DemonKiller
-  title: Open Source Developer
+  title: High Performance Computing @ TeamEPCC
   url: https://demonkiller.in
   image_url: https://github.com/demonkillerr.png
