--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lucide-react": "^0.460.0",
     "prism-react-renderer": "^2.4.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.9.2"
