--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
           # Build output to publish to the `gh-pages` branch:
           publish_dir: ./build
           # Preserve CNAME for custom domain
-          cname: demonkiller.co.uk
+          cname: gaurang.co.uk
           # The following lines assign commit authorship to the official
           # GH-Actions bot for deploys to `gh-pages` branch:
           # https://github.com/actions/checkout/issues/13#issuecomment-724415212
